perf: 修复业务接口和工具类中的某些错误注释和方法名称